Change dead style to thicker lines

--- a/genogram.sty
+++ b/genogram.sty
@@ -73,8 +73,8 @@
     dead/.style={opacity=0.5,
         append after command={%
             \pgfextra{%
-                \draw[very thin, shorter=0.3pt] (\tikzlastnode.south west) -- (\tikzlastnode.north east);
-                \draw[very thin, shorter=0.3pt] (\tikzlastnode.south east) -- (\tikzlastnode.north west);
+                \draw[thin, shorter=0.3pt] (\tikzlastnode.south west) -- (\tikzlastnode.north east);
+                \draw[thin, shorter=0.3pt] (\tikzlastnode.south east) -- (\tikzlastnode.north west);
             }
         }
     },
