--- a/genogram.sty
+++ b/genogram.sty
@@ -477,9 +477,17 @@
     \pgfqkeys{/couple/wife}{default,#1}\ignorespaces
 }
 
-\newcommand{\child}[1][]{%
+\newcommand{\internal@child}[2][]{%
     \stepcounter{NumberOfChildren}%
-    \pgfqkeys{/couple/last child}{default,#1}\ignorespaces
+    \pgfqkeys{/couple/last child}{default,#2,#1}\ignorespaces
+}
+
+\newcommand{\son}[1][]{%
+    \internal@child[#1]{male}
+}
+
+\newcommand{\daughter}[1][]{%
+    \internal@child[#1]{female}
 }
 
 \newcommand{\internal@checkOfValue}{%
